--- a/DecimalSharp.Core/DecimalSharp.Core.csproj
+++ b/DecimalSharp.Core/DecimalSharp.Core.csproj
@@ -19,6 +19,7 @@
 	  <PackageTags>decimal, arbitrary-precision, bigdecimal, bignumber, significant-digits, trigonometric-functions, decimal-places</PackageTags>
 	  <PackageLicenseFile>LICENSE</PackageLicenseFile>
 	  <PackageRequireLicenseAcceptance>False</PackageRequireLicenseAcceptance>
+	  <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
 	<ItemGroup>
